# aave-v3-tracker

./: .gitignore  Cargo.toml  README.md
migrations/2025-12-04-115836-0000_create_reserves_table/: down.sql  up.sql
src/: errors.rs  lib.rs  main.rs  provider.rs
src/abi/: erc20.rs  mod.rs  pool.rs  pool_configurator.rs  protocol_data_provider.rs  token.rs  ui_pool_data_provider.rs
src/backfill/: dispatcher.rs  mod.rs  poller.rs  runner.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
src/db/repositories/: bootstrap_state_repository.rs  emode_categories_repository.rs  mod.rs  processed_events_repository.rs  reserve_state_repository.rs  reserves_repository.rs  sync_status_repository.rs  user_emode_repository.rs  user_positions_repository.rs
src/indexer/: backfill.rs  backfill_loop.rs  dispatcher.rs  mod.rs
src/sync_reserves/: fetch_reserves.rs  mod.rs  reserve_event_handler.rs
src/user_tracking/: mod.rs  position_event_handler.rs  subgraph_bootstrap.rs
tests/: backfill.rs  bigdecimal_conversion.rs  emode.rs  event_decoder.rs  event_ordering.rs  event_pipeline.rs  multi_provider.rs  position_state_transitions.rs  processed_events.rs  reserve_state.rs  reserves_repository.rs  subgraph_snapshot.rs  sync_reserve.rs  sync_status.rs  user_positions.rs
tests/common/: db.rs  fixtures.rs  log_builder.rs  mod.rs
