[package]
name = "aave-v3-tracker"
version = "0.1.0"
edition = "2024"

[lib]
name = "aave_v3_tracker"
path = "src/lib.rs"

[[bin]]
name = "aave-v3-tracker"
path = "src/main.rs"

[dependencies]
alloy = { version = "1.0.41", features = ["provider-ws", "contract", "rpc", "sol-types"] }
diesel = { version = "2.1", features = ["postgres", "numeric", "bigdecimal"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8", "deadpool"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
bigdecimal = "0.4.9"
eyre = "0.6.12"
futures-util = "0.3.31"
thiserror = "2.0.17"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
backoff = { version = "0.4.0", features = ["tokio"] }
alloy-sol-types = "1.4.1"
alloy-primitives = "1.4.1"
alloy-provider = "1.1.3"
chrono = "0.4.42"
futures = "0.3.31"
diesel_migrations = "2.1"
serial_test = "3.3.1"
alloy-network = "1.1.3"
async-trait = "0.1"


[dev-dependencies]
tokio-test = "0.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
pretty_assertions = "1.4"
rstest = "0.24"
fake = { version = "3.0", features = ["derive"] }
tempfile = "3.14"
